--- a/Fekrah/API/ClientApp/src/app/core/add-to-cart/add-to-cart.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/add-to-cart/add-to-cart.component.scss
@@ -827,7 +827,7 @@
   }
 }
 .payment-section {
-  background: linear-gradient(36deg, #e9a360 80%, #e39d1c 120%);
+  background: linear-gradient(0deg, #cf7f05 0%, #c3ad86 100%);
   width: 80vw;
   margin: 0 auto;
   padding: 50px;
