--- a/Fekrah/API/ClientApp/src/app/Shared/layout/header/header.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/layout/header/header.component.html
@@ -44,10 +44,11 @@
   <div class="container">
     <ul class="nav-list">
       <li *ngFor="let item of navItems">
-        <a (click)="goToSection(item.target)">
+        <a (click)="goToNavItem(item)">
           {{ item.label }}
         </a>
       </li>
     </ul>
   </div>
 </nav>
+
