--- a/Fekrah/API/ClientApp/src/app/dashboard/dashboar-main/dashboard.component.scss
+++ b/Fekrah/API/ClientApp/src/app/dashboard/dashboar-main/dashboard.component.scss
@@ -571,6 +571,9 @@
   z-index: 1050;
   padding: 2rem 1rem; // MODIFIED: تعديل الـ padding الجانبي إذا لزم الأمر
   overflow-y: auto; // IMPORTANT: هذا يجعل الغلاف الخارجي قابلاً للتمرير إذا تجاوز المودال ارتفاع الشاشة
+  width: 50vw;
+  margin: 0 auto;
+  margin-top: 5vh;
 }
 
 .modal-content { // هذه هي الحاوية المباشرة لـ <app-quick-add-form>
