--- a/Fekrah/API/ClientApp/src/styles.scss
+++ b/Fekrah/API/ClientApp/src/styles.scss
@@ -18,7 +18,7 @@ button {
 }
 
 * {
-  font-family: "Almarai", sans-serif;
+  font-family: "Almarai", sans-serif !important;
   font-weight: 400;
   box-sizing: border-box;
 }
